Add convenient tmux bindings.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -135,6 +135,12 @@ bind -n C-right select-pane -R
 bind -n C-down  select-pane -D
 bind -n C-up    select-pane -U
 
+bind -n C-M-up    respawn-pane -k
+bind -n C-M-down  kill-pane
+bind -n C-M-left  swap-pane -U
+bind -n C-M-right swap-pane -D
+bind -n C-M-\     split-window -h
+
 # Keybinding for voltron
 bind v source-file ~/.tmux/voltron.session
 
