--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -140,6 +140,7 @@ bind -n C-M-down  kill-pane
 bind -n C-M-left  swap-pane -U
 bind -n C-M-right swap-pane -D
 bind -n C-M-\     split-window -h
+bind -n C-M-]     split-window -v
 
 # Keybinding for voltron
 bind v source-file ~/.tmux/voltron.session
