--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -125,22 +125,27 @@ set -g history-limit 50000
 # Start pane number at one
 set -g base-index 0
 
-# urxvt tab mapping
+# Window switching
 bind -n S-up    new-window
 bind -n S-down  confirm-before -p "kill-window #W? (y/n)" kill-window
 bind -n S-left  prev
 bind -n S-right next
+
+# Pane switching
 bind -n C-left  select-pane -L
 bind -n C-right select-pane -R
 bind -n C-down  select-pane -D
 bind -n C-up    select-pane -U
 
+# Pane special operations
 bind -n C-M-up    respawn-pane -k
 bind -n C-M-down  kill-pane
 bind -n C-M-left  swap-pane -U
 bind -n C-M-right swap-pane -D
-bind -n C-M-\     split-window -h
-bind -n C-M-]     split-window -v
+
+# Window splitting
+bind -n C-M-\ split-window -h
+bind -n C-M-] split-window -v
 
 # Keybinding for voltron
 bind v source-file ~/.tmux/voltron.session
