--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -8,6 +8,7 @@
 	dump = cat-file -p
 	dsf = "!f() { [ \"$GIT_PREFIX\" != \"\" ] && cd "$GIT_PREFIX"; git diff --color $@ | diff-so-fancy | less --tabs=4 -RFX; }; f"
 	graph = log --graph --all --decorate --stat --date=iso
+	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 
 [merge]
 	tool = meld
