Set TERM to screen-256color

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,8 +14,8 @@
 # source-file ~/.tmux.reset.conf
 #
 
-# Make xterm-256color default
-set -g default-terminal "xterm-256color"
+# Make screen-256color default
+set -g default-terminal "screen-256color"
 
 # Remap prefix key to C-t
 unbind C-b
