--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -142,6 +142,7 @@ bind -n C-M-up    respawn-pane -k
 bind -n C-M-down  kill-pane
 bind -n C-M-left  swap-pane -U
 bind -n C-M-right swap-pane -D
+bind -n C-M-z resize-pane -Z
 
 # Window splitting
 bind -n C-M-\ split-window -h
