Bind C-M-k to clear tmux history

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -143,6 +143,7 @@ bind -n C-M-down  kill-pane
 bind -n C-M-left  swap-pane -U
 bind -n C-M-right swap-pane -D
 bind -n C-M-z resize-pane -Z
+bind -n C-M-k clear-history
 
 # Window splitting
 bind -n C-M-\ split-window -h
