--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,9 +41,31 @@ set -g set-titles on
 set -g set-titles-string '#(whoami)::#h::#(curl ipecho.net/plain;echo)'
 
 # Set status line
-set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
-set -g @prefix_highlight_fg 'black'
-set -g @prefix_highlight_bg 'red'
+# set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+# set -g @prefix_highlight_fg 'black'
+# set -g @prefix_highlight_bg 'red'
+
+# From smallhadroncollider
+set -g status-interval 5 # update every five seconds
+set -g status-left '  #S   '
+set -g status-right-length 70
+set -g status-left-length 150
+set -g @online_icon ""
+set -g @offline_icon ""
+set -g @batt_full_charge_icon ""
+set -g @batt_high_charge_icon ""
+set -g @batt_medium_charge_icon ""
+set -g @batt_low_charge_icon ""
+set -g @batt_charging_icon ""
+set -g @batt_charged_icon ""
+set -g @batt_attached_icon ""
+set -g status-right '   #{cpu_percentage} |  %H:%M |  %d %B %Y '
+set -g status-justify left
+
+
+setw -g window-status-format " #W "
+setw -g window-status-current-format " #W "
+# setw -g window-status-current-fg magenta
 
 # Keybindings for window splitting
 bind | split-window -h
@@ -154,6 +176,7 @@ bind v source-file ~/.tmux/voltron.session
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
