Add tmux themepack

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,6 +17,8 @@
 # Make screen-256color default
 set -g default-terminal "screen-256color"
 
+set -g @themepack 'basic'
+
 # Remap prefix key to C-t
 unbind C-b
 set -g prefix C-t
@@ -176,6 +178,7 @@ bind v source-file ~/.tmux/voltron.session
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
