--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,7 +1,8 @@
 [alias]
 	co = checkout
 	ci = commit
-	st = status
+	st = status -uno
+	stu = status
 	br = branch
 	hist = log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short
 	type = cat-file -t
