Add synchronize-panes binding with color

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -139,7 +139,15 @@ bind -n M-left  resize-pane -L 1
 bind -n M-right resize-pane -R 1
 
 # Synchronize panes toggle
-bind e set -g synchronize-panes
+# bind e set -g synchronize-panes
+bind e if -F '#{pane_synchronized}' \
+                'setw synchronize-panes off; \
+                setw pane-active-border-style fg=green,bg=default; \
+                setw pane-border-format       " #P "' \
+            'setw synchronize-panes on; \
+            setw pane-active-border-style fg=red; \
+            setw pane-border-format       " #P - Pane Synchronization ON "'
+
 # Use the line below to query for this option
 # tmux show-window-option -g synchronize-panes
 
