--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -97,6 +97,7 @@ set -g @fingers-compact-hints 1
 set -g @fingers-key f
 set -g @fingers-copy-command 'nohup xclip -selection clipboard'
 set -g @fingers-pattern-0 '([[:alnum:][:punct:]]{5,})'
+set -g @jump-key 'j'
 
 # Vim keybindings
 # hjkl for moving between panes
@@ -194,7 +195,9 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-set -g @plugin 'Morantron/tmux-fingers'
+#set -g @plugin 'Morantron/tmux-fingers'
+set -g @plugin 'schasse/tmux-jump'
+set -g @plugin 'fcsonline/tmux-thumbs'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
