--- a/terminator/.config/terminator/config
+++ b/terminator/.config/terminator/config
@@ -19,6 +19,7 @@
     font = Roboto Mono Medium for Powerline Medium 14
     icon_bell = False
     palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#8ae234:#657b83:#729fcf:#6c71c4:#93a1a1:#fdf6e3"
+    scrollback_infinite = True
     show_titlebar = False
     use_system_font = False
   [[doom]]
