Update tmuxinator setup for pwn

--- a/tmuxinator/.tmuxinator/dev.yml
+++ b/tmuxinator/.tmuxinator/dev.yml
@@ -30,13 +30,11 @@ root: ~/
 startup_window: 2
 
 windows:
-  - "[#_#] quad":
-      layout: 14a0,191x55,0,0{95x55,0,0[95x27,0,0,7,95x27,0,28,10],95x55,96,0[95x27,96,0,8,95x27,96,28,9]}
+  - "[@_@] pwn":
+      layout: d777,191x55,0,0{95x55,0,0,0,95x55,96,0,3}
       panes:
-        - cln && clear
-        - er && clear
-        - pls && clear
-        - rst && clear
+        - cd ~/nightmare && clear
+        - cd ~/nightmare && clear
   # - "[o.0] gdb":
   #     layout: 9160,191x55,0,0{152x55,0,0[152x27,0,0,14,152x16,0,28,17,152x10,0,45{106x10,0,45,18,45x10,107,45,19}],38x55,153,0[38x43,153,0,15,38x11,153,44,16]}
   #     panes:
